# aiomoto

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mypy.ini  pyproject.toml  ty.toml  uv-secure.toml
.github/workflows/: pre-commit.yml  pytest.yml  release.yml  update_dependencies.yml  update_linters.yml
docs/: moto-porting.md  roadmap.md
scripts/: manage_aioboto_pins.py  manage_dependency_bounds.py  size_ratio.py  test_version_matrix.py  update_optional.py
src/aiomoto/: __init__.py  aioboto3_patch.py  context.py  mock.py
src/aiomoto/patches/: __init__.py  aioboto3.py  core.py  server_mode.py
tests/: test_acmpca_async.py  test_apigatewaymanagementapi_async.py  test_appmesh_async.py  test_backup_async.py  test_bedrock_async.py  test_bedrockagent_async.py  test_clouddirectory_async.py  test_cloudhsmv2_async.py  test_codebuild_async.py  test_codecommit_async.py  test_codedeploy_async.py  test_codepipeline_async.py  test_cognitoidentity_async.py  test_connectcampaigns_async.py  test_context_edge_cases.py  test_context_internal.py  test_datasync_async.py  test_dax_async.py  test_directconnect_async.py  test_dynamodb_async.py  test_dynamodb_v20111205_async.py  test_dynamodbstreams_async.py  test_ebs_async.py  test_ec2instanceconnect_async.py  test_elasticache_async.py  test_elasticbeanstalk_async.py  test_emrcontainers_async.py  test_emrserverless_async.py  test_events_async.py  test_fsx_async.py  test_identitystore_async.py  test_iotdata_async.py  test_ivs_async.py  test_kafka_async.py  test_kinesisvideo_async.py  test_kms_async.py  test_lambda_simple_async.py  test_lexv2models_async.py  test_macie_async.py  test_mediaconnect_async.py  (+43 more)
tests/patches/: test_aioboto3_internal.py  test_core_internal.py
