[project]
name = "aiomoto"
version = "0.3.0"
description = "Moto-style AWS service mocks for aiobotocore/aioboto3"
readme = "README.md"
authors = [
    { name = "Owen Lamont", email = "owenrlamont@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "aws",
    "moto",
    "aioboto3",
    "aiobotocore",
    "asyncio",
    "testing",
    "mocks",
]
dependencies = [
    "aiobotocore>=2.24.1,<=2.25.1",
    "moto>=5.1.5,<=5.1.20",
    "platformdirs>=4.0.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/owenlamont/aiomoto"
Issues = "https://github.com/owenlamont/aiomoto/issues"

[project.optional-dependencies]
acm = ["moto[acm]>=5.1.5,<=5.1.20"]
acmpca = ["moto[acmpca]>=5.1.5,<=5.1.20"]
all = ["moto[all]>=5.1.5,<=5.1.20"]
amp = ["moto[amp]>=5.1.5,<=5.1.20"]
apigateway = ["moto[apigateway]>=5.1.5,<=5.1.20"]
apigatewayv2 = ["moto[apigatewayv2]>=5.1.5,<=5.1.20"]
applicationautoscaling = ["moto[applicationautoscaling]>=5.1.5,<=5.1.20"]
appsync = ["moto[appsync]>=5.1.5,<=5.1.20"]
athena = ["moto[athena]>=5.1.5,<=5.1.20"]
autoscaling = ["moto[autoscaling]>=5.1.5,<=5.1.20"]
awslambda = ["moto[awslambda]>=5.1.5,<=5.1.20"]
awslambda-simple = ["moto[awslambda-simple]>=5.1.5,<=5.1.20"]
backup = ["moto[backup]>=5.1.5,<=5.1.20"]
batch = ["moto[batch]>=5.1.5,<=5.1.20"]
batch-simple = ["moto[batch-simple]>=5.1.5,<=5.1.20"]
budgets = ["moto[budgets]>=5.1.5,<=5.1.20"]
ce = ["moto[ce]>=5.1.5,<=5.1.20"]
cloudformation = ["moto[cloudformation]>=5.1.5,<=5.1.20"]
cloudfront = ["moto[cloudfront]>=5.1.5,<=5.1.20"]
cloudtrail = ["moto[cloudtrail]>=5.1.5,<=5.1.20"]
cloudwatch = ["moto[cloudwatch]>=5.1.5,<=5.1.20"]
codebuild = ["moto[codebuild]>=5.1.5,<=5.1.20"]
codecommit = ["moto[codecommit]>=5.1.5,<=5.1.20"]
codepipeline = ["moto[codepipeline]>=5.1.5,<=5.1.20"]
cognitoidentity = ["moto[cognitoidentity]>=5.1.5,<=5.1.20"]
cognitoidp = ["moto[cognitoidp]>=5.1.5,<=5.1.20"]
comprehend = ["moto[comprehend]>=5.1.5,<=5.1.20"]
config = ["moto[config]>=5.1.5,<=5.1.20"]
databrew = ["moto[databrew]>=5.1.5,<=5.1.20"]
datapipeline = ["moto[datapipeline]>=5.1.5,<=5.1.20"]
datasync = ["moto[datasync]>=5.1.5,<=5.1.20"]
dax = ["moto[dax]>=5.1.5,<=5.1.20"]
dms = ["moto[dms]>=5.1.5,<=5.1.20"]
ds = ["moto[ds]>=5.1.5,<=5.1.20"]
dynamodb = ["moto[dynamodb]>=5.1.5,<=5.1.20"]
dynamodbstreams = ["moto[dynamodbstreams]>=5.1.5,<=5.1.20"]
ebs = ["moto[ebs]>=5.1.5,<=5.1.20"]
ec2 = ["moto[ec2]>=5.1.5,<=5.1.20"]
ec2instanceconnect = ["moto[ec2instanceconnect]>=5.1.5,<=5.1.20"]
ecr = ["moto[ecr]>=5.1.5,<=5.1.20"]
ecs = ["moto[ecs]>=5.1.5,<=5.1.20"]
efs = ["moto[efs]>=5.1.5,<=5.1.20"]
eks = ["moto[eks]>=5.1.5,<=5.1.20"]
elasticache = ["moto[elasticache]>=5.1.5,<=5.1.20"]
elasticbeanstalk = ["moto[elasticbeanstalk]>=5.1.5,<=5.1.20"]
elastictranscoder = ["moto[elastictranscoder]>=5.1.5,<=5.1.20"]
elb = ["moto[elb]>=5.1.5,<=5.1.20"]
elbv2 = ["moto[elbv2]>=5.1.5,<=5.1.20"]
emr = ["moto[emr]>=5.1.5,<=5.1.20"]
emrcontainers = ["moto[emrcontainers]>=5.1.5,<=5.1.20"]
emrserverless = ["moto[emrserverless]>=5.1.5,<=5.1.20"]
es = ["moto[es]>=5.1.5,<=5.1.20"]
events = ["moto[events]>=5.1.5,<=5.1.20"]
firehose = ["moto[firehose]>=5.1.5,<=5.1.20"]
forecast = ["moto[forecast]>=5.1.5,<=5.1.20"]
glacier = ["moto[glacier]>=5.1.5,<=5.1.20"]
glue = ["moto[glue]>=5.1.5,<=5.1.20"]
greengrass = ["moto[greengrass]>=5.1.5,<=5.1.20"]
guardduty = ["moto[guardduty]>=5.1.5,<=5.1.20"]
iam = ["moto[iam]>=5.1.5,<=5.1.20"]
inspector2 = ["moto[inspector2]>=5.1.5,<=5.1.20"]
iot = ["moto[iot]>=5.1.5,<=5.1.20"]
iotdata = ["moto[iotdata]>=5.1.5,<=5.1.20"]
ivs = ["moto[ivs]>=5.1.5,<=5.1.20"]
kinesis = ["moto[kinesis]>=5.1.5,<=5.1.20"]
kinesisvideo = ["moto[kinesisvideo]>=5.1.5,<=5.1.20"]
kinesisvideoarchivedmedia = ["moto[kinesisvideoarchivedmedia]>=5.1.5,<=5.1.20"]
kms = ["moto[kms]>=5.1.5,<=5.1.20"]
logs = ["moto[logs]>=5.1.5,<=5.1.20"]
managedblockchain = ["moto[managedblockchain]>=5.1.5,<=5.1.20"]
mediaconnect = ["moto[mediaconnect]>=5.1.5,<=5.1.20"]
medialive = ["moto[medialive]>=5.1.5,<=5.1.20"]
mediapackage = ["moto[mediapackage]>=5.1.5,<=5.1.20"]
mediastore = ["moto[mediastore]>=5.1.5,<=5.1.20"]
mediastoredata = ["moto[mediastoredata]>=5.1.5,<=5.1.20"]
meteringmarketplace = ["moto[meteringmarketplace]>=5.1.5,<=5.1.20"]
mq = ["moto[mq]>=5.1.5,<=5.1.20"]
opsworks = ["moto[opsworks]>=5.1.5,<=5.1.20"]
organizations = ["moto[organizations]>=5.1.5,<=5.1.20"]
panorama = ["moto[panorama]>=5.1.5,<=5.1.20"]
personalize = ["moto[personalize]>=5.1.5,<=5.1.20"]
pinpoint = ["moto[pinpoint]>=5.1.5,<=5.1.20"]
polly = ["moto[polly]>=5.1.5,<=5.1.20"]
proxy = ["moto[proxy]>=5.1.5,<=5.1.20"]
quicksight = ["moto[quicksight]>=5.1.5,<=5.1.20"]
ram = ["moto[ram]>=5.1.5,<=5.1.20"]
rds = ["moto[rds]>=5.1.5,<=5.1.20"]
redshift = ["moto[redshift]>=5.1.5,<=5.1.20"]
redshiftdata = ["moto[redshiftdata]>=5.1.5,<=5.1.20"]
rekognition = ["moto[rekognition]>=5.1.5,<=5.1.20"]
resourcegroups = ["moto[resourcegroups]>=5.1.5,<=5.1.20"]
resourcegroupstaggingapi = ["moto[resourcegroupstaggingapi]>=5.1.5,<=5.1.20"]
route53 = ["moto[route53]>=5.1.5,<=5.1.20"]
route53resolver = ["moto[route53resolver]>=5.1.5,<=5.1.20"]
s3 = ["moto[s3]>=5.1.5,<=5.1.20"]
s3control = ["moto[s3control]>=5.1.5,<=5.1.20"]
s3crc32c = ["moto[s3crc32c]>=5.1.5,<=5.1.20"]
sagemaker = ["moto[sagemaker]>=5.1.5,<=5.1.20"]
scheduler = ["moto[scheduler]>=5.1.5,<=5.1.20"]
sdb = ["moto[sdb]>=5.1.5,<=5.1.20"]
secretsmanager = ["moto[secretsmanager]>=5.1.5,<=5.1.20"]
server = ["moto[server]>=5.1.5,<=5.1.20"]
servicediscovery = ["moto[servicediscovery]>=5.1.5,<=5.1.20"]
servicequotas = ["moto[servicequotas]>=5.1.5,<=5.1.20"]
ses = ["moto[ses]>=5.1.5,<=5.1.20"]
signer = ["moto[signer]>=5.1.5,<=5.1.20"]
sns = ["moto[sns]>=5.1.5,<=5.1.20"]
sqs = ["moto[sqs]>=5.1.5,<=5.1.20"]
ssm = ["moto[ssm]>=5.1.5,<=5.1.20"]
ssoadmin = ["moto[ssoadmin]>=5.1.5,<=5.1.20"]
stepfunctions = ["moto[stepfunctions]>=5.1.5,<=5.1.20"]
sts = ["moto[sts]>=5.1.5,<=5.1.20"]
support = ["moto[support]>=5.1.5,<=5.1.20"]
swf = ["moto[swf]>=5.1.5,<=5.1.20"]
textract = ["moto[textract]>=5.1.5,<=5.1.20"]
timestreamwrite = ["moto[timestreamwrite]>=5.1.5,<=5.1.20"]
transcribe = ["moto[transcribe]>=5.1.5,<=5.1.20"]
wafv2 = ["moto[wafv2]>=5.1.5,<=5.1.20"]
xray = ["moto[xray]>=5.1.5,<=5.1.20"]
# Pinned until pandas 3.14/free-threaded support stabilizes:
# https://github.com/pandas-dev/pandas/issues/62261
pandas = [
    "moto[server]>=5.1.5,<=5.1.20",
    "pandas>=2.2.0,<=3.0.0",
]
# Pinned while validating Polars server-mode shim:
# https://github.com/owenlamont/aiomoto/issues/48
# Python 3.14 support tracked upstream:
# https://github.com/pola-rs/polars/issues/25035
polars = [
    "moto[server]>=5.1.5,<=5.1.20; python_full_version < \"3.14\"",
    "polars>=1.35.1,<=1.36.1; python_full_version < \"3.14\"",
]

[dependency-groups]
dev = [
    "aioboto3>=15.3.0",
    "types-aioboto3[full]>=15.3.0",
    "tomlkit>=0.13.2",
    "boto3-stubs[full]>=1.40.61",
    "packaging>=25.0",
    "coverage>=7.6.9",
    "freezegun>=1.5.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "types-aiobotocore[full]>=2.24.1",
    "s3fs>=2024.6.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist[psutil]>=3.8.0",
    # Pinned until pandas 3.14/free-threaded support stabilizes:
    # https://github.com/pandas-dev/pandas/issues/62261
    "pandas>=2.2.0,<=3.0.0",
    "pyarrow>=22.0.0",
    "pandas-stubs>=2.3.3.251201",
    # Gated on Windows 3.14+ until pywin32 free-threaded wheels land:
    # https://github.com/mhammond/pywin32/issues/2303
    "moto[server]>=5.1.5,<=5.1.20; python_full_version < \"3.14\" or sys_platform != \"win32\"",
    # Pinned while validating Polars server-mode shim:
    # https://github.com/owenlamont/aiomoto/issues/48
    # Python 3.14 support tracked upstream:
    # https://github.com/pola-rs/polars/issues/25035
    "polars>=1.35.1,<=1.36.1; python_full_version < \"3.14\"",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
